Fix websites having a weird height on firefox and hideCursor not working

--- a/src/content/reaperscans/styles.css
+++ b/src/content/reaperscans/styles.css
@@ -8,3 +8,9 @@ img.max-w-full.mx-auto.display-block {
 	width: 25vw;
 	height: auto;
 }
+
+/* Fix hide cursor not working because the cursor is outside the page */
+.h-screen {
+	min-height: 100vh !important;
+	height: auto !important;
+}
