--- a/src/pages/base.css
+++ b/src/pages/base.css
@@ -13,5 +13,5 @@ html {
 
 body {
 	width: 100vw;
-	height: 100vh;
+	min-height: 100vh;
 }
